Fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,12 +116,14 @@ nav > ul {
   .cart {
     font-size: 15px;
     margin: 7px 18px;
+    padding-right: 5px;
   }
 
   .fresh-flowers {
     padding: 0px 15px;
     flex-direction: column-reverse;
     margin-top: 20px;
+    justify-content: center;
   }
 
   .flower-hed {
@@ -132,9 +134,11 @@ nav > ul {
 
   .fresh-flowers p {
     font-size: 18px;
+    padding-right: 20px;
   }
 
   .fresh-flowers img {
     width: 100%;
+    padding-right: 25px;
   }
 }
